Fixed some layout bugs.

--- a/src/components/pages/services/fssai-central/components/LeftContent.css
+++ b/src/components/pages/services/fssai-central/components/LeftContent.css
@@ -7,3 +7,7 @@ ul li{
     margin-top: 0.3em;
     margin-bottom: 0.3em;
 }
+
+#lefty button{
+    margin-top: 3em;
+}
